css/style.css
body {
  background: darkslategray;
  color: white;
  height: 100svh;
  font-family: sans-serif;
}

body,
.game {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#result {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  margin-top: 1rem;
  border: 2px solid white;
  border-radius: 2px;
  width: 10rem;
  height: 3rem;
  text-align: center;
}

#score {
  display: flex;
  gap: 3rem;
  margin-bottom: 1rem;
  justify-content: center;
}

.blocks {
  text-align: center;
  font-size: 2rem;
}

h1,
h2 {
  margin: 0;
  padding: 0;
  font-family: 'Bebas Neue', fantasy;
  text-align: center;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3rem;
  color: pink;
}

button {
  background: white;
  border: 2px solid white;
  border-radius: 5px;
  padding: 3px;
  margin: 2px;
  height: 5rem;
  width: 5rem;
  color: darkslategray;
  font-size: 3rem;
  text-align: center;
  box-shadow: 0 6px pink;
}

button:hover {
  cursor: pointer;
  background-color: rgb(255, 233, 233);
}

button:active {
  box-shadow: none;
  transform: translateY(6px);
}

button > * {
  pointer-events: none;
}

.off {
  display: none;
}

.start-game {
  font-family: 'Bebas Neue', sans-serif;
  font-size: 2rem;
  width: auto;
  height: auto;
  padding: 0 0.5rem;
  margin-top: 1rem;
}

